# hommx

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: index.md
docs/api/: cell_problem.md  fem.md  helpers.md  hmm.md  petsc_helper.md
docs/config/: mathjax.js  style.css
docs/usage/: usage.md
examples/: hmm.py  hmm_3d.py  hmm_vs_semi.py  hmm_vs_semi_create_reference_cluster.py  hmm_vs_semi_homogenized_cluster.py
examples/diffusion/: inclusion.py  laminate.py
examples/linear_elasticity/: rotated_fibers.py
plots/: convergence_plots.py  convergence_plots_fem_calc.py  convergence_plots_funcs.py  convergence_plots_hmm_calc.py  convergence_stratified_vs_reference.csv
plots/plots_diffusion/: wavy_laminate.py
src/hommx/: cell_problem.py  fem.py  helpers.py  hmm.py  petsc_helper.py
test/integration/: test_integration.py  test_integration_linear_elasticity.py  test_integration_poisson.py
test/unit/: test_unit.py
